# Django-GraphQL

./: README.md  pyproject.toml
GraphQl/: asgi.py  settings.py  urls.py  wsgi.py
GraphQlenv/: pyvenv.cfg
GraphQlenv/Scripts/: activate  activate.bat
schema/: schema.py
users/migrations/: 0001_initial.py
